logs/daversy.log
Listing '.'...
Listing './bin'...
Listing './cx_Oracle-doc'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cx_Oracle-6.1.dist-info'...
Listing './lib/python3.5/site-packages/daversy'...
Listing './lib/python3.5/site-packages/daversy/command'...
Compiling './lib/python3.5/site-packages/daversy/command/compare.py'...
***   File "./lib/python3.5/site-packages/daversy/command/compare.py", line 172
    print output.encode('utf-8')
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/daversy/command/name.py'...
***   File "./lib/python3.5/site-packages/daversy/command/name.py", line 22
    print saved_state.name
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/daversy/db'...
Listing './lib/python3.5/site-packages/daversy/db/oracle'...
Compiling './lib/python3.5/site-packages/daversy/difflib_ext.py'...
***   File "./lib/python3.5/site-packages/daversy/difflib_ext.py", line 78
    print diff
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/daversy/dvs.py'...
***   File "./lib/python3.5/site-packages/daversy/dvs.py", line 11
    print "Type '%s help' for usage." % (cmd)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/daversy/plugins.py'...
***   File "./lib/python3.5/site-packages/daversy/plugins.py", line 16
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/daversy/state.py'...
***   File "./lib/python3.5/site-packages/daversy/state.py", line 190
    print "Extracting %s" % builder.DbClass.__name__
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/daversy/tools'...
Compiling './lib/python3.5/site-packages/daversy/tools/dvstool_oracle.py'...
***   File "./lib/python3.5/site-packages/daversy/tools/dvstool_oracle.py", line 34
    except KeyboardInterrupt, SystemExit:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/daversy/utils.py'...
***   File "./lib/python3.5/site-packages/daversy/utils.py", line 107
    number &= ~(0xc000 << 48L)
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/daversy-0.3.4.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
